tdf#147810 DOCX export: fix corrupt file with hyperlink and text box

Remove m_startedHyperlink boolean, because the
m_nHyperLinkCount is more precise in nested paragraphs,
e.g. when exporting hyperlink combined with the export
of the paragraph of a text box attached to the paragraph
of the hyperlink, which caused corrupt DOCX file with data
loss.

Regression from commit 9835a5823e0f559aabbc0e15ea126c82229c4bc7
"sw textboxes: reimplement ODF import/export".

Change-Id: I94bcb64a756ba2c90360629640f667190fa45f3a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149677
Tested-by: Jenkins
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>